Añadidido en la BD guardar y eliminar prestamos